--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,26 @@
-Flask~=3.1.2
-Flask-RESTful~=0.3.10
-flask-cors~=6.0.1
-SQLAlchemy~=2.0.43
-Flask-Migrate~=4.1.0
-alembic~=1.16.5
-marshmallow~=4.0.1
+alembic==1.16.5
+aniso8601==10.0.1
+backports-datetime-fromisoformat==2.0.3
+blinker==1.9.0
+click==8.3.0
+colorama==0.4.6
+Flask==3.1.2
+flask-cors==6.0.1
+flask-marshmallow==1.3.0
+Flask-Migrate==4.1.0
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.4
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.3
+marshmallow==4.0.1
+marshmallow-sqlalchemy==1.4.2
+psycopg2==2.9.10
+pytz==2025.2
+six==1.17.0
+SQLAlchemy==2.0.43
+tomli==2.2.1
+typing_extensions==4.15.0
+Werkzeug==3.1.3
