updated the code

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # .env file
 MASTER_DATABASE_URL='postgresql://hms:hms_main_123@91.108.104.49:5432/hms'
-#MASTER_DATABASE_URL='postgresql://user_cea07c68:e8458e71802d4c94@91.108.104.49:5432/tenant_cea07c68'
+#MASTER_DATABASE_URL='postgresql://user_747b86b4:c10f79f8dbe4464c@91.108.104.49:5432/tenant_747b86b4'
 SUPERUSER_DB_USER='hms'
 SUPERUSER_DB_PASSWORD='hms_main_123'
 DB_HOST='91.108.104.49'
