--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -48,3 +48,5 @@ formatter = generic
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
 datefmt = %H:%M:%S
+
+sqlalchemy.url = postgresql://hms:hms_main_123@91.108.104.49:5432/hms
